2016-05-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-mime-widget-message.c (add_header_gchar),
	(add_header_sigstate): use GtkGrid API better.

2016-05-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use top line of digital signature for GtkExpander label instead
	of "Digital Signature"

	* src/balsa-mime-widget-crypto.c
	(balsa_mime_widget_signature_widget):

2016-05-16  Albrecht Dreß

	Make SSL mandatory

	* libbalsa/imap/md5-utils.c: remove.
	* libbalsa/imap/md5-utils.h: ditto.

2016-05-16  Albrecht Dreß

	With this patch, Balsa will pop up the key selection dialogue
	containing /all/ keys which may be used for encryption in this
	case.  The user can either select a key, or cancel the
	operation.  This basically is the same behaviour as of
	Thunderbird.

	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_select_key),
	(key_selection_changed_cb), (sort_iter_cmp_fn):
	* libbalsa/libbalsa-gpgme-cb.h:
	* libbalsa/libbalsa-gpgme.c (get_key_from_name), (get_pubkey),
	(gpgme_add_signer), (gpgme_build_recipients):
	* libbalsa/libbalsa-gpgme.h:

2016-05-16  Albrecht Dreß

	* libbalsa/gmime-gpgme-signature.c
	(libbalsa_cert_subject_readable):
	This trivial patch makes sure that the GPG key or S/MIME
	certificate subject string as returned by
	libbalsa_cert_subject_readable() is utf8-clean.

2016-03-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_display_new_mail_notification):
	  duplicate some lines of code to simplify conditional
	  compilation.

2016-03-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-handle.c (imap_message_new): use whitespace
	  to resolve ambiguous assignment.

2016-03-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa-gpgme-cb.h: remove Emacs hack.

2016-03-12  Albrecht Dreß

	* Bug fixes: due to broken assignments in libbalsa_gpgme_init(),
	  the callbacks for selecting a GnuPG key from a list
	  or for accepting low-trust keys individually are never called.